<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="10dp"
        android:id="@+id/txtTransferScancode"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="10dp"
        android:id="@+id/txtTransferBarcodeCount"/>

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/transfer_scanner"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescan"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:id="@+id/btnRescan"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:id="@+id/btnConfirm"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:id="@+id/btnFinish"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:id="@+id/lstTransfercodes">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>