<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="?attr/bgColor">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtSettingsVersionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_login"
                android:id="@+id/switchAutologin"
                android:checked="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_gps"
                android:id="@+id/switchGPS"
                android:checked="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hideLogout"
                android:id="@+id/switchHideLogout"
                android:checked="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hideRefresh"
                android:id="@+id/switchHideRefresh"
                android:checked="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lockSettings"
                android:id="@+id/switchLockSettings"
                android:checked="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                android:id="@+id/switchNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/notifications" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/webview_refresh"
                    android:id="@+id/switchRefresh"
                    android:checked="false" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView"
                    android:layout_height="wrap_content"
                    android:text="@string/rotateImage"
                    android:layout_weight="1"
                    android:textColor="?attr/textColor"
                    android:layout_width="0dp" />

                <Spinner
                    android:id="@+id/spinner_degrees"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/settings_gpscontainer"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/max_length"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_horizontal" />

                <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/numberPicker1"
                        android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

<!--            <Switch-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/monitor_call_history"-->
<!--                android:id="@+id/switch5"-->
<!--                android:checked="false" />-->

<!--            <LinearLayout-->
<!--                android:id="@+id/call_historyContainer"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:visibility="gone">-->

<!--                <FrameLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="10dp"-->
<!--                    android:layout_gravity="center_horizontal" />-->

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@color/control_background"-->
<!--                    android:layout_weight="1"-->
<!--                    android:hint="@string/slice_contact">-->
<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:id="@+id/contact_slice"/>-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->

<!--                <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/slice_contact_text"/>-->

<!--                <Button-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/sync_contacts"-->
<!--                        android:id="@+id/btnSyncContacts"-->
<!--                        android:background="@color/colorAccent"-->
<!--                        android:textColor="@color/control_background"-->
<!--                        android:paddingHorizontal="16dp"-->
<!--                        android:layout_gravity="end" />-->

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:background="@color/control_background"-->
<!--                        android:layout_weight="1"-->
<!--                        android:hint="@string/slice_history">-->
<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:id="@+id/history_slice"/>-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->

<!--                <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/slice_history_text"/>-->

<!--            </LinearLayout>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
